--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "vue": "^3.2.45",
     "vue-loader": "^17.0.1",
+    "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   }
 }
